added add to queue endpoint
