# src/domains/queue/queue.dto.ts
@@ -1,0 +1,10 @@
+import { IQueue } from '@root/entities';
+import { QueueDTO } from './types';
+
+export const toQueueDTO = async (
+  queueItem: IQueue,
+): Promise<QueueDTO> => ({
+  queueID: queueItem.id,
+  recipeID: queueItem.recipe.id,
+  machineID: queueItem.serialNumber,
+});
