# src/domains/queue/types.ts
@@ -1,0 +1,5 @@
+export type QueueDTO = {
+  queueID: number;
+  machineID: number;
+  recipeID: number;
+};
