# swagger/requestBodies.yml
@@ -61,3 +61,20 @@ components:
               description: the ID of the queue item that is done
               example: 12
               format: number
+    AddToQueueBody:
+      application/json:
+        schema:
+          type: object
+          properties:
+            recipeID:
+              type: number
+              required: true
+              description: the ID of the recipe to add to the queue
+              example: 42
+              format: number
+            machineID:
+              type: number
+              required: true
+              description: the ID of the machine
+              example: 123456
+              format: number
